2002-02-14  Chris Lyttle    <chris@wilddev.net>

	* help/C/gnobots2.xml : move to XML.

	* help/C/gnobots2-C.omf : move to XML.

	* help/C/gnobots2.sgml : deleted, move to XML.

	* help/C/Makefile.am : move to XML.
	
2002-02-02  Zbigniew Chyla  <cyba@gnome.pl>

	* menu.c (about_cb): Don't try to translate empty string.

2001-12-19  Seth Nickell  <snickell@stanford.edu>

	* Makefile.am:
	* gnobots2.desktop:

	Install into the proper location and add a Categories
	field.
	
2001-07-27  Abel Cheung  <maddog@linux.org.hk>

	* gnobots2.desktop: Added traditional Chinese translation.

2001-07-12  Juan Pablo Mendoza <pablo_juan@yahoo.com>

	* Makefile.am: Don't create a `echo' file.

2001-07-07  Juan Pablo Mendoza <pablo_juan@yahoo.com>

	* gnobots.c
	* graphics.c: Vaya con dios imlib.

2001-07-05  Christian Rose  <menthos@menthos.com>

	* gnobots2.desktop: Modified Swedish entries.

2001-06-10  Juan Pablo Mendoza <pablo_juan@yahoo.com>

	* game.c : Apply patch from Matthew Sullivan <mattsull@iname.com>.
	  Bug #10664.

2001-06-09  Juan Pablo Mendoza <pablo_juan@yahoo.com>

	Fix bug #50786.

	* game.c (log_score): Use the same logic that in show_scores to
	  get the score name.
	* Makefile.am (install-data-local): Generate also the super-safe
	  score files and fix a typo in the generation of the -safe files.

2001-06-03  Juan Pablo Mendoza Mendoza <pablo_juan@yahoo.com>

	* gnobots.c (main): Don't try to free the gnome_master_client to
	  silent a gtk warning on exit.

2001-03-20 John Fleck <jfleck@swcp.com>

	* adding sgml version of docs - Makefiles still need to be done.
	
2000-05-12  Andreas Hyden  <a.hyden@cyberpoint.se>

	* gnobots.desktop: Added Swedish translation.

2000-04-22  Ian Peters  <itp@gnu.org>

	* gnobots.c: moved calls to push_[visual|colormap], added calls to
	  pop_[colormap|visual] -- these are for the drawing_area only, not for
	  everything.

1999-03-04  Ian Peters  <itp@acm.org>

	* keyboard.c: keyboard_cb: Commented out suspicious line checking