@@ -3,7 +3,7 @@ figs = \
 docname = gnobots2
 lang = C
 omffile = gnobots2-C.omf
-entities = 
+entities = legal.xml
 include $(top_srcdir)/xmldocs.make
 dist-hook: app-dist-hook
 
